@@ -108,7 +108,7 @@ bc_symbol_rec_t *add_imptable_rec(const char *proc_name, int lib_id, int symbol_
     comp_imptable.elem = (bc_symbol_rec_t **)realloc(comp_imptable.elem,
                                                      (comp_imptable.count + 1) * sizeof(bc_symbol_rec_t **));
   } else {
-    comp_imptable.elem = (bc_symbol_rec_t **)malloc(comp_imptable.count * sizeof(bc_symbol_rec_t **));
+    comp_imptable.elem = (bc_symbol_rec_t **)malloc(sizeof(bc_symbol_rec_t **));
   }
   comp_imptable.elem[comp_imptable.count] = sym;
   comp_imptable.count++;
@@ -128,7 +128,7 @@ void add_libtable_rec(const char *lib, int uid, int type) {
     comp_libtable.elem = (bc_lib_rec_t **)realloc(comp_libtable.elem,
                                                  (comp_libtable.count + 1) * sizeof(bc_lib_rec_t **));
   } else {
-    comp_libtable.elem = (bc_lib_rec_t **)malloc(comp_libtable.count * sizeof(bc_lib_rec_t **));
+    comp_libtable.elem = (bc_lib_rec_t **)malloc(sizeof(bc_lib_rec_t **));
   }
   comp_libtable.elem[comp_libtable.count] = imlib;
   comp_libtable.count++;
@@ -4346,31 +4346,32 @@ byte_code comp_create_bin() {
   hdr.var_count = comp_varcount;
   hdr.lab_count = comp_labcount;
   hdr.data_ip = comp_first_data_ip;
-  hdr.size = sizeof(bc_head_t) + comp_prog.count + (comp_labcount * ADDRSZ)
-             + sizeof(unit_sym_t) * comp_expcount + sizeof(bc_lib_rec_t) * comp_libcount
-             + sizeof(bc_symbol_rec_t) * comp_impcount;
-
+  hdr.size = sizeof(bc_head_t) + comp_prog.count + (comp_labcount * ADDRSZ) +
+             sizeof(unit_sym_t) * comp_expcount +
+             sizeof(bc_lib_rec_t) * comp_libcount +
+             sizeof(bc_symbol_rec_t) * comp_impcount;
   if (comp_unit_flag) {
     hdr.size += sizeof(unit_file_t);
   }
 
   hdr.lib_count = comp_libcount;
   hdr.sym_count = comp_impcount;
-
   if (comp_unit_flag) {
+    memset(&uft, 0, sizeof(unit_file_t));
+
     // it is a unit... add more info
-    bc.size = hdr.size + 4;
+    bc.size = hdr.size;
     bc.code = malloc(bc.size);
 
     // unit header
     memcpy(&uft.sign, "SBUn", 4);
     uft.version = 1;
+
     strcpy(uft.base, comp_unit_name);
     uft.sym_count = comp_expcount;
 
-    cp = bc.code;
-    memcpy(cp, &uft, sizeof(unit_file_t));
-    cp += sizeof(unit_file_t);
+    memcpy(bc.code, &uft, sizeof(unit_file_t));
+    cp = bc.code + sizeof(unit_file_t);
 
     // unit symbol table (export)
     for (i = 0; i < uft.sym_count; i++) {
@@ -4423,7 +4424,6 @@ byte_code comp_create_bin() {
   if (!opt_quiet && !opt_interactive) {
     log_printf("\n");
     log_printf(RES_NUMBER_OF_VARS, comp_varcount, comp_varcount - 18);
-    // system variables
     log_printf(RES_NUMBER_OF_LABS, comp_labcount);
     log_printf(RES_NUMBER_OF_UDPS, comp_udpcount);
     log_printf(RES_CODE_SIZE, comp_prog.count);
@@ -4514,11 +4514,12 @@ int comp_compile(const char *sb_file_name) {
     }
   }
 
+  int is_unit = comp_unit_flag;
   comp_close();
   close_task(tid);
   activate_task(prev_tid);
 
-  if (opt_nosave) {
+  if (opt_nosave && !is_unit) {
     ctask->bytecode = bc.code;
   } else if (bc.code) {
     free(bc.code);
