@@ -41,6 +41,7 @@ void unit_mgr_close() {
   unit_count = 0;
   if (units) {
     free(units);
+    units = NULL;
   }
 }
 
@@ -105,7 +106,7 @@ int find_unit(const char *name, char *file) {
  * @return the unit handle or -1 on error
  */
 int open_unit(const char *file) {
-  int h, i;
+  int h;
   unit_t u;
   int uid = -1;
 
@@ -161,34 +162,23 @@ int open_unit(const char *file) {
   }
 
   // load symbol-table
-  u.symbols = (unit_sym_t *) malloc(u.hdr.sym_count * sizeof(unit_sym_t));
-  read(h, u.symbols, u.hdr.sym_count * sizeof(unit_sym_t));
+  if (u.hdr.sym_count) {
+    u.symbols = (unit_sym_t *)malloc(u.hdr.sym_count * sizeof(unit_sym_t));
+    read(h, u.symbols, u.hdr.sym_count * sizeof(unit_sym_t));
+  }
 
   // setup the rest
   strcpy(u.name, unitname);
   u.status = unit_loaded;
 
   // add unit
-  if (unit_count == 0) {
-    // this is the first unit
-    uid = unit_count;
-    unit_count++;
-    units = (unit_t *) malloc(unit_count * sizeof(unit_t));
-  } else {
-    // search for an empty entry
-    for (i = 0; i < unit_count; i++) {
-      if (units[i].status == unit_undefined) {
-        uid = i;
-        break;
-      }
-    }
+  uid = unit_count;
+  unit_count++;
 
-    // resize the table
-    if (uid == -1) {
-      uid = unit_count;
-      unit_count++;
-      units = (unit_t *) realloc(units, unit_count * sizeof(unit_t));
-    }
+  if (units == NULL) {
+    units = (unit_t *)malloc(unit_count * sizeof(unit_t));
+  } else {
+    units = (unit_t *)realloc(units, unit_count * sizeof(unit_t));
   }
 
   // copy unit's data
@@ -207,9 +197,7 @@ int open_unit(const char *file) {
  */
 int close_unit(int uid) {
   if (uid >= 0) {
-    unit_t *u;
-
-    u = &units[uid];
+    unit_t *u = &units[uid];
     if (u->status == unit_loaded) {
       u->status = unit_undefined;
       free(u->symbols);
@@ -233,11 +221,8 @@ int import_unit(int uid) {
   char buf[SB_KEYWORD_SIZE + 1];int i;
 
   if (uid >= 0) {
-    unit_t *u;
-
-    u = &units[uid];
+    unit_t *u = &units[uid];
     if (u->status == unit_loaded) {
-
       for (i = 0; i < u->hdr.sym_count; i++) {
         // build the name
         // with any path component removed from the name
@@ -246,13 +231,13 @@ int import_unit(int uid) {
             dir_sep ? dir_sep + 1 : u->hdr.base, u->symbols[i].symbol);
 
         switch (u->symbols[i].type) {
-          case stt_function:
+        case stt_function:
           comp_add_external_func(buf, uid | UID_UNIT_BIT);
           break;
-          case stt_procedure:
+        case stt_procedure:
           comp_add_external_proc(buf, uid | UID_UNIT_BIT);
           break;
-          case stt_variable:
+        case stt_variable:
           comp_add_external_var(buf, uid | UID_UNIT_BIT);
           break;
         };
@@ -272,7 +257,7 @@ int import_unit(int uid) {
 /**
  * execute a call to a unit
  */
-int unit_exec(int lib_id, int index, var_t * ret) {
+int unit_exec(int lib_id, int index, var_t *ret) {
   unit_sym_t *us;               // unit's symbol data
   bc_symbol_rec_t *ps;          // program's symbol data
   int my_tid;
@@ -282,15 +267,12 @@ int unit_exec(int lib_id, int index, var_t * ret) {
   ps = &prog_symtable[index];
   us = &(taskinfo(ps->task_id)->sbe.exec.exptable[ps->exp_idx]);
 
-  //
   switch (ps->type) {
   case stt_variable:
     break;
   case stt_procedure:
     exec_sync_variables(1);
-
     cmd_call_unit_udp(kwPROC, ps->task_id, us->address, 0);
-
     activate_task(ps->task_id);
     if (prog_error) {
       gsb_last_error = prog_error;
@@ -309,9 +291,7 @@ int unit_exec(int lib_id, int index, var_t * ret) {
 
   case stt_function:
     exec_sync_variables(1);
-
     cmd_call_unit_udp(kwFUNC, ps->task_id, us->address, us->vid);
-
     activate_task(ps->task_id);
     if (prog_error) {
       gsb_last_error = prog_error;
