@@ -37,3 +37,8 @@ test: ${bin_PROGRAMS}
       cat test.out;                                           \
     fi ;                                                      \
   done;
+
+leak-test: ${bin_PROGRAMS}
+	@for utest in $(UNIT_TESTS); do                             \
+    valgrind --leak-check=full ./${bin_PROGRAMS} ${TEST_DIR}/$${utest}.bas 1>/dev/null; \
+  done;
