@@ -1,3 +1,6 @@
+2016-04-20 (0.12.6)
+	Fixed memory handling issues with UNITs
+
 2016-03-29 (0.12.6)
 	Removed TICKSPERSEC
 	Removed BALLOC, MALLOC and VADR keywords. Removed duplicate ENVIRON
